syntax = "proto3";

package proto;

service Storage {
  rpc Ping (PingRequest) returns (PingReply) {}
  rpc InsertKey (InsertKeyRequest) returns (InsertKeyReply) {}
  rpc GetKey (GetKeyRequest) returns (GetKeyReply) {}
}

message Error {
  string message = 1;
}

message PingRequest {
  string name = 1;
}

message PingReply {
  Error error = 1;
  string message = 2;
}

message InsertKeyRequest {
  string name = 1;
  bytes value = 2;
}

message InsertKeyReply {
  Error error = 1;
}

message GetKeyRequest {
  string name = 1;
}

message GetKeyReply {
  Error error = 1;
  bytes value = 2;
}